// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ConvertToMojiMessage /> > converts message and emojis to moji message 1`] = `
"✨✨✨✨✨✨✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨💜💜💜💜💜✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨✨✨✨✨✨✨
✨✨✨✨✨✨✨
✨💜💜💜💜💜✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨💜💜💜💜💜✨
✨✨✨✨✨✨✨"
`;

exports[`<ConvertToMojiMessage /> > copies converted moji message w/ marketing text to clipboard when user clicks copy 1`] = `
"✨✨✨✨✨✨✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨💜💜💜💜💜✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨💜✨✨✨💜✨
✨✨✨✨✨✨✨
✨✨✨✨✨✨✨
✨💜💜💜💜💜✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨✨✨💜✨✨✨
✨💜💜💜💜💜✨
✨✨✨✨✨✨✨

🚀 Powered by Moji Message (https://emoji.seandodson.com)"
`;
